tests/compile_fail/derive_payload_struct_named_payload.stderr
error: struct name cannot be just "Payload"
  --> tests/compile_fail/derive_payload_struct_named_payload.rs:11:8
   |
11 | struct Payload;
   |        ^^^^^^^
